VERSION: 0.3.1

Known issues:
- Sort links need updating to support ajax requests fully.
- Possible need to enable/disable Tag cache.
- Poor code coverage of the PicasaService.

Release notes 0.3.1
- Update all controller index methods to point to the album controller's index.

Release notes 0.3.0
- Introduction of the "showPrivateAlbums" and "showPrivatePhotos" config options.
- Update PicasaService to include the ability to configure whether to include private photos and albums.
- README updates.
- Fixed small bug in the album show view.

Release notes 0.2.0
- Small fix to remove tag list div when there are no tags to display.
- Removal of dependency on Spring Security.
- Introduction of the Comment domain class.
- Introduction of the Person domain class.
- Inserted comments into the show photo views.
- Added person to comments.
- Small comment / person bug fixes to the PicasaService.
- Grails upgrade to 1.2.2.
- Changes tags and comment properties to lists to allow predictable ordering.

Release notes 0.1.0
- README update.
- Insert next/previous ID check into the photo show views.
- Introduction of tags into domain objects from photo result sets.
- Introduction of tag listing into list views.
- PicasaService updates to support tag queries and searches.
- Initial support for the tag controller.
- Introduction of new configuration properties.
- Initial support for the tag listing and show views.

Release notes 0.0.3
- README update.
- Introduction of new connect() method allowing the Picasa web service connection to be reset during runtime.
- Introduction of new reset() method allowing the Picasa web service to revert back to the default Config.groovy connection details during runtime.

Release notes 0.0.2
- Introduction of further documentation (README / CHANGES)
- Internationalised the Photo and Album views
- Small tweak to the Picasa Service and Album / Photo controllers

Initial release: 0.0.1
